# pls-2024-group-c

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  App.py  DEVELOPMENT.md  DefaultMode.py  DefaultMode.ui  Interface.py  MainScript.py  ManualControl.py  Projectconfiguration.py  README.md  RetiredCode.py  Setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  untitled.py  untitled.ui
Contributions/Alain/: DataStructModule.py  DynamicControlModule.py  Interface.py  PlotStructModule.py  UIElements.py
Contributions/Nora/: GUI_design.ipynb
Generated_UI/: DefaultMode.py  ExpandedMode.py  ExpandedModeEntry.ui  Stuff.ui
Images/Alain/: DataStructModule.py  DynamicControlModule.py
Main/: App.py
Main/GUI/: App.py  Commands.py  Interface.py  Loadwindow.py  Mainwindow_Ui.py  Processes.py
Main/GUI/ModeWindows/: BaseScene.py  Default.py  Dynamic.py  Expanded.py  ExpandedModeEntry.py
Main/Utilities/: DataStructModule.py  PlotStructModule.py  Processes.py
_to_be_refactored/: App.py  Setup.py
_to_be_refactored/Contributions/Alain/: MainScript.py  ManualControl.py  UIElements.py
_to_be_refactored/Contributions/Nora/: miRNA_Gillespie.ipynb
_to_be_refactored/Generated_UI/: DefaultMode.py  DefaultMode.ui  ExpandedMode.ui  untitled.py
_to_be_refactored/Main/GUI/: Commands.py  Loadwindow.py
_to_be_refactored/Main/GUI/ModeWindows/: Expanded.py
_to_be_refactored/Main/Utilities/: PlotStructModule.py  Processes.py
examples/: config.json  example.ipynb
gillepsie/: __init__.py  cli.py
gillepsie/core/: DataStructModule.py  PlotStructModule.py
gillepsie/gui/: Commands.py  Interface.py  Loadwindow.py  Mainwindow_Ui.py  __init__.py  config.py
gillepsie/gui/ModeWindows/: Default.py  Expanded.py
gillespie/: __init__.py  cli.py
gillespie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
gillespie/core/: __init__.py  result.py  simulation.py
gillespie/core/io/: __init__.py  csv_parser.py  json_parser.py  yaml_parser.py
gillespie/core/plot/: __init__.py  visualize_species.py
gillespie/gui/: Commands.py  Interface.py  Loadwindow.py  Mainwindow_Ui.py  config.py
gillespie/gui/ModeWindows/: Default.py  Dynamic.py  Expanded.py
gillespie/gui/util/: PlotStructModule.py  __init__.py
tests/: test_cli.py  test_plot.py
