[project]
name = "gillespie"
version = "0.1.0"
description = "A Python implementation of Gillepsie simulation, with GUI"
authors = [
    {name = "Alain Bubendor", email = "alain.bubendorf@unibas.ch"},
    {name = "Rafael Paulo da Silveira", email = "rafael.paulodasilveira@unibas.ch"},
    {name = "Sena Aydin", email = "sena.aydin@unibas.ch"},
    {name = "Nora Vocat", email = "nora.vocat@unibas.ch"},
    {name = "Minghang \"Matchy\" Li", email = "minghang.li@unibas.ch"},
]

requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["dependencies"]


[project.scripts]
gillespie = "gillespie.cli:main"

[project.gui-scripts]
gillespie-gui = "gillespie.gui:launch_gui"

[project.urls]
repository = "https://git.scicore.unibas.ch/zavolan_group/teaching_and_tutorials/pls-2024-group-c"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.pdm]
distribution = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyx?$'
